Added new picture that blends to the background and new titles that go under the picture

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oskar's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="javascript/script.js"></script>
 </head>
-<body>
+<body style="height:4000px;">
     <div id="header">
         <div class="container"></div>
         <nav>
             <img src="resources/" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/Oskar's Portfolio Website/about.html">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contact</a></li>
@@ -25,6 +26,15 @@
         <div class="header-text">
             <p></p>
 
+        </div>
+        <div class="title">
+            <h1>Oskar's Portfolio Website</p>
+        </div>
+        <div class="about-me">
+            <h2>
+                <li>Student at California State Fullerton</li>
+                <li>C++</li>
+            </h2>
         </div>
     </div>
 </body>
